@@ -1,6 +1,9 @@
 v2.2.5 (work-in-progress)
       * Increase test timeout threshold by a factor of two, to avoid timeouts in
         github Windows CI tests.
+      * Reduce interim disk usage when calling mcpl_merge_outfiles_mpi by
+        removing per-thread files before attempting output file compression
+        (GitHub issue #119).
       * ...
 
 v2.2.4 2025-10-20
